--- a/notebooks/BAE305_Python_HW_Notebook/PY0101EN-5-1-Numpy1D.ipynb
+++ b/notebooks/BAE305_Python_HW_Notebook/PY0101EN-5-1-Numpy1D.ipynb
@@ -1269,14 +1269,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Write your code below and press Shift+Enter to execute\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m u = \u001b[43mnp\u001b[49m.array([\u001b[32m1\u001b[39m, \u001b[32m0\u001b[39m])\n\u001b[32m      4\u001b[39m v = np.array([\u001b[32m0\u001b[39m, \u001b[32m1\u001b[39m])\n\u001b[32m      5\u001b[39m u-v\n",
+      "\u001b[31mNameError\u001b[39m: name 'np' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Write your code below and press Shift+Enter to execute\n",
     "\n",
     "u = np.array([1, 0])\n",
-    "v = np.array([0, 1])"
+    "v = np.array([0, 1])\n",
+    "u-v"
    ]
   },
   {
@@ -1306,13 +1319,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Write your code below and press Shift+Enter to execute\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m z = \u001b[43mnp\u001b[49m.array([\u001b[32m2\u001b[39m, \u001b[32m4\u001b[39m])\n\u001b[32m      4\u001b[39m -\u001b[32m2\u001b[39m*z\n",
+      "\u001b[31mNameError\u001b[39m: name 'np' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Write your code below and press Shift+Enter to execute\n",
     "\n",
-    "z = np.array([2, 4])"
+    "z = np.array([2, 4])\n",
+    "-2*z"
    ]
   },
   {
@@ -1342,11 +1368,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Write your code below and press Shift+Enter to execute\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m a = \u001b[43mnp\u001b[49m.array([\u001b[32m1\u001b[39m,\u001b[32m2\u001b[39m,\u001b[32m3\u001b[39m,\u001b[32m4\u001b[39m,\u001b[32m5\u001b[39m])\n\u001b[32m      3\u001b[39m b= np.array([\u001b[32m1\u001b[39m,\u001b[32m0\u001b[39m,\u001b[32m1\u001b[39m,\u001b[32m0\u001b[39m,\u001b[32m1\u001b[39m])\n\u001b[32m      4\u001b[39m a*b\n",
+      "\u001b[31mNameError\u001b[39m: name 'np' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code below and press Shift+Enter to execute"
+    "# Write your code below and press Shift+Enter to execute\n",
+    "a = np.array([1,2,3,4,5])\n",
+    "b= np.array([1,0,1,0,1])\n",
+    "a*b"
    ]
   },
   {
@@ -1378,11 +1419,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Write your code below and press Shift+Enter to execute\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m a = \u001b[43mnp\u001b[49m.array([-\u001b[32m1\u001b[39m,\u001b[32m1\u001b[39m])\n\u001b[32m      3\u001b[39m b=np.array([\u001b[32m1\u001b[39m,\u001b[32m1\u001b[39m])\n\u001b[32m      4\u001b[39m Plotvec2(a,b)\n",
+      "\u001b[31mNameError\u001b[39m: name 'np' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code below and press Shift+Enter to execute"
+    "# Write your code below and press Shift+Enter to execute\n",
+    "a = np.array([-1,1])\n",
+    "b=np.array([1,1])\n",
+    "Plotvec2(a,b)\n",
+    "print(\"the dot product is\", np.dot(a,b))"
    ]
   },
   {
@@ -1415,11 +1472,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Write your code below and press Shift+Enter to execute\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m a= \u001b[43mnp\u001b[49m,array([\u001b[32m1\u001b[39m, \u001b[32m0\u001b[39m])\n\u001b[32m      3\u001b[39m b = np.array([\u001b[32m0\u001b[39m, \u001b[32m1\u001b[39m])\n\u001b[32m      4\u001b[39m Plotvec2(a, b)\n",
+      "\u001b[31mNameError\u001b[39m: name 'np' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code below and press Shift+Enter to execute"
+    "# Write your code below and press Shift+Enter to execute\n",
+    "a= np,array([1, 0])\n",
+    "b = np.array([0, 1])\n",
+    "Plotvec2(a, b)\n",
+    "print(\"The dot product is\", np.dot(a, b))\n",
+    "\n"
    ]
   },
   {
@@ -1456,7 +1530,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code below and press Shift+Enter to execute"
+    "# Write your code below and press Shift+Enter to execute\n",
+    "a = np.array([1, 1])\n",
+    "b = np.array([0, 1])\n",
+    "Plotvec2(a, b)\n",
+    "print(\"The dot product is\", np.dot(a, b))\n",
+    "print(\"The dot product is\", np.dot(a, b))"
    ]
   },
   {
@@ -1494,7 +1573,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code below and press Shift+Enter to execute"
+    "# Write your code below and press Shift+Enter to execute\n",
+    "\n",
+    "The vectors used for question 4 and 5 are perpendicular. As a result, the dot product is zero. "
    ]
   },
   {
@@ -1560,7 +1641,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1574,7 +1655,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
