--- a/notebooks/BAE305_Python_HW_Notebook/PY0101EN-5.1_Intro_API - JD edit.ipynb
+++ b/notebooks/BAE305_Python_HW_Notebook/PY0101EN-5.1_Intro_API - JD edit.ipynb
@@ -512,13 +512,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'plt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m fig, ax = \u001b[43mplt\u001b[49m.subplots()\n\u001b[32m      3\u001b[39m games_away.plot(x=\u001b[33m'\u001b[39m\u001b[33mGAME_DATE\u001b[39m\u001b[33m'\u001b[39m,y=\u001b[33m'\u001b[39m\u001b[33mPLUS_MINUS\u001b[39m\u001b[33m'\u001b[39m, ax=ax)\n\u001b[32m      4\u001b[39m games_home.plot(x=\u001b[33m'\u001b[39m\u001b[33mGAME_DATE\u001b[39m\u001b[33m'\u001b[39m,y=\u001b[33m'\u001b[39m\u001b[33mPLUS_MINUS\u001b[39m\u001b[33m'\u001b[39m, ax=ax)\n",
+      "\u001b[31mNameError\u001b[39m: name 'plt' is not defined"
+     ]
+    }
+   ],
    "source": [
     "fig, ax = plt.subplots()\n",
     "\n",
@@ -554,7 +566,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -568,7 +580,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
